--- a/server/package.json
+++ b/server/package.json
@@ -37,7 +37,9 @@
     "nodemailer": "^7.0.3",
     "pg": "^8.16.3",
     "ulid": "^3.0.1",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "winston": "^3.18.3",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@types/pg": "^8.15.5",
